Migrate `transaction_summary` to `direct_api handler` (#298)
